cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/vector_sort ${CMAKE_BINARY_DIR}/samples/vector_sort)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/string_split ${CMAKE_BINARY_DIR}/samples/string_split)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/sstream_hello_world ${CMAKE_BINARY_DIR}/samples/sstream_hello_world)