cmake_minimum_required(VERSION 3.14 FATAL_ERROR)

function(add_sample name)
  add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/${name} ${CMAKE_BINARY_DIR}/samples/${name})
endfunction()

add_sample(vector_sort)
add_sample(string_split)
add_sample(make_shared)
add_sample(set_insert)
add_sample(to_string)
add_sample(container_forward)
add_sample(fibonacci)
add_sample(memcpy)
add_sample(merge_sort)